# bg3-debug-tool

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  clippy.toml
.cargo/: config.toml
src/: BinaryMappings.xml  base_utilities.rs  binary_mappings.rs  console.rs  game_definitions.rs  globals.rs  hooks.rs  hud.rs  lib.rs  main.rs  menu.rs  script_extender.rs  shims.rs  util.rs  version.rs  wrappers.rs
src/game_definitions/: common.rs  cpp.rs  enums.rs  functors.rs  icon.rs  loc.rs  osiris.rs  prototype.rs  resource.rs  root_templates.rs
src/game_definitions/common/: array.rs  glm.rs  map.rs  string.rs
src/game_object/: Cargo.toml
src/game_object/src/: lib.rs
src/hooks/: dx11.rs  osiris.rs  vulkan.rs  vulkan_egui.rs
src/hooks/shaders/: frag.frag
src/menu/: backend.rs  console.rs  egui_backend_win32.rs  egui_vulkan.rs  search.rs
src/menu/search/: functions.rs  items.rs  osiris_helpers.rs  other.rs  passives.rs  spells.rs  statuses.rs  table.rs  table_value.rs  templates.rs
src/wrappers/: osiris.rs
