[package]
name = "bg3se-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"

[features]
default = ["all"]
all = ["debug"]
osi-no-debugger = []
debug = []

[dependencies]
build-time = "0.1"
libc = "0.2"
widestring = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System",
    "Win32_System_Console",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
] }
