[package]
name = "bg3se-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"

[features]
default = ["all"]
all = ["debug"]
osi-no-debugger = []
debug = []

[dependencies]
build-time = "0.1"
libc = "0.2"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.193", features = ["derive"] }
uuid = "1.6.1"
widestring = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_Console",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
] }
