[package]
name = "bg3-debug-tool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "bg3-debug-tool-loader"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"

[features]
default = ["all"]
all = ["debug"]
osi-no-debugger = []
debug = []

[dependencies]
anyhow = "1.0"
ash = { version = "0.37", features = ["linked"] }
bitflags = "2.5"
build-time = "0.1"
clap = { version = "4.5", features = ["derive"] }
hudhook = "0.6"
imgui = { version = "0.11", features = ["docking", "tables-api"] }
itertools = "0.12"
libc = "0.2"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["extra-traits", "full"] }
uuid = "1.6"
widestring = "1.0"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_Console",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
x86_64 = "0.14"

[build-dependencies]
cc = "1.0"
